# Test

ledgerize/: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  SPEC.md  mypy.ini  pyproject.toml
ledgerize/.github/workflows/: ci.yml
ledgerize/samples/: accounts.yml  n26_2025-06.csv  rules.yml
ledgerize/src/app/: __init__.py  __main__.py  cli_aliases.py  cli_safe.py  main.py  tools.py
ledgerize/src/ledgerize/: __init__.py  cli.py  config.py  db.py  dedupe.py  guard.py  logging.py  normalize.py  report.py  rules.py  types.py  utils.py  vault.py
ledgerize/src/ledgerize/parsers/: __init__.py  base.py  bnp.py  generic.py  n26.py
ledgerize/src/ledgerize/templates/: report.html.j2
ledgerize/tests/: test_cli.py  test_cli_safe.py  test_guard.py  test_secure_flow.py  test_vault.py
